# rust-actions

./: .rustfmt.toml  Cargo.toml  README.md  package-lock.json
.github/workflows/: manual-testing.yaml  release.yaml
run/conflict-markers/: action.yml
src/: main.rs
src/action/: conflictMarkers.rs  mod.rs
