[package]
name = "actions"
version = "0.0.1"
authors = ["K.J. Valencik <kjvalencik@gmail.com>"]
description = "Github Actions Toolkit"
homepage = "https://github.com/kjvalencik/actions"
repository = "https://github.com/kjvalencik/actions.git"
license = "MIT"
publish = false
edition = "2018"

[dependencies]
anyhow = "1"
actions-toolkit = { version = "=0.0.2", path = "crates/toolkit" }
octocrab = "0.32.0"
tokio = { version = "1.17.0", default-features = false, optional = true }

[devDependencies]
tokio = { version = "1.17.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }

[workspace]
members = [
	"./crates/toolkit",
	"./crates/core",
]
